--- a/css/CustomerPage.css
+++ b/css/CustomerPage.css
@@ -1,3 +1,10 @@
+/*
+--text: #0a0d10;
+--background: #fcfdfd;
+--primary: #43476b;
+--secondary: #c9c0d8;
+--accent: #4804b6;
+*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
