--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -27,13 +27,13 @@ nav li {
 }
 .category-box {
     background-color: #f0f0f0;
-    border-radius: 3px%; /* Creates rounded corners */
+    border-radius: 3px; 
     width: auto;
     height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px;
+    margin: 50px;
     text-align: center;
     text-decoration: none;
     color: #333;
