--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -33,7 +33,8 @@ nav li {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50px;
+    margin: 10px;
+    padding: 10px;
     text-align: center;
     text-decoration: none;
     color: #333;
