--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -33,7 +33,7 @@ nav li {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1px;
+    margin: 10px 0px 19px 0px;
     padding: 15px;
     text-align: center;
     text-decoration: none;
