--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -41,7 +41,7 @@ nav li {
     padding: 15px;
     text-align: center;
     text-decoration: none;
-    color: #fff3f3;
+    color: #43476b;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
