--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -30,7 +30,7 @@ nav li {
 }
 
 .category-box {
-    background-color: #434743;
+    background-color: #43476b;
     border-radius: 3px;
     width: auto;
     height: auto;
