--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -12,8 +12,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #fcfdfd;
+    color: #fcfdfd;
     padding: 10px;
     text-align: center;
 }
