--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -17,6 +17,15 @@ body {
     margin-right: auto;
 }
 
+.categoryText {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: #0a0d10;
+}
+
 
 header {
     background-color: #fcfdfd;
