--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -16,6 +16,9 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+.icon:hover {
+    transform: scale(1.1);
+}
 
 .categoryText {
     font-size: 15px;
