--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -18,7 +18,10 @@ body {
 }
 .icon:hover {
     transform: scale(1.1);
-    color:#fcfdfd;
+}
+
+.categoryText:hover {
+    transform: scale(1.1);
 }
 
 .categoryText {
