--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -25,7 +25,7 @@ body {
 }
 
 .categoryText {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
     font-weight: bold;
     margin: 0;
