--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -54,7 +54,7 @@ nav li {
 
 
 .category-box {
-    background-color: #f8f4ff;
+    background-color: #f3ecff;
     border-radius: 3px;
     width: auto;
     height: auto;
