--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -74,3 +74,8 @@ nav li {
     background-color: #43476b;
     color: #fafafa;
 }
+
+.category-box2:hover {
+    background-color: #43476b;
+    color: #fafafa;
+}
