--- a/Slidestyle.css
+++ b/Slidestyle.css
@@ -32,6 +32,7 @@ body {
     padding: 20px 12px;
     box-sizing: border-box;
     transition: 0.5s;
+
 }
 .container:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
@@ -99,7 +100,6 @@ body {
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-
 .box p {
     margin-top: 15px;
     color: #666;
@@ -121,4 +121,92 @@ body {
     .row{
         flex-direction: column;
     }
+}
+
+/* reviews*/
+.testmonials{
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;
+}
+.testimonial-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+.testimonial-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+.testimonial-col p{
+    padding: 0;
+}
+.testimonial-col h3{
+    margin-top: 15px;
+    text-align: left;
+}
+.testimonial-col .fa{
+    color: #f44336; 
+}
+@media(max-width: 700px){
+    .testimonial-col img{
+        margin-left: 5px;
+        margin-right: 30px;
+    }
+}
+
+/*------------------cta--------------------*/
+
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7),
+    rgba(0,0,0,0.7)),url(images/lpu.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 30px;
+    }
+}
+
+/*--------------footer------------------*/
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.icons .fa{
+    color: #f44336;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+}
+.fa-heart-o{
+    color:#f44336
 }
