--- a/Slidestyle.css
+++ b/Slidestyle.css
@@ -11,52 +11,55 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #fff3f3;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
-    background: linear-gradient(90deg, #43476b, #007BFF);
+/*    background: linear-gradient(90deg, #43476b, #007BFF);*/
 
 }
 
 .container {
     margin: auto;
     display: flex;
-    background: #f5f5f5;
+    background: #ffffff;
     align-items: center;
     height: 100vh;
-    flex-basis: 31%;
+    margin-top: 50px;
+/*    flex-basis: 31%;*/
     justify-content: space-around;
-    background: #fff3f3;
     border-radius: 3px;
-    margin-bottom: 5%;
-    padding: 20px 12px;
+    padding: 20px px;
     box-sizing: border-box;
     transition: 0.5s;
 
 }
 .container:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+/*    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);*/
 }
-
 .box {
+    background-color: #a5def0;
+background-image: linear-gradient(270deg, #a5def0 0%, #eeeef8 100%);
+
     display: flex;
     align-items: center;
     border-radius: 20px;
-    background-color: #fff;
+/*    background-color: #fff;*/
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding-top: 100px;
     height: 500px;
-    width: 300px;
+    width: 500px;
     text-align: center;
-    flex-basis: 31%;
-    background: #fff;
+/*    flex-basis: 31%;*/
+/*    background: #fff;*/
     margin-bottom: 5%;
-    padding: 20px 12px;
+    padding: 20px 70px;
     box-sizing: border-box;
     transition: 0.5s;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-
+}
+.sub{
+    background: #ffffff;
 }
 .box:hover {
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
@@ -66,7 +69,8 @@ body {
 
 .box h2 {
     text-align:center;
-    font-weight: 600;
+    letter-spacing: 5px;
+    font-style: bold;
     margin: 0 0 20px;
     color: #333;
     font-size: 24px;
@@ -75,29 +79,45 @@ body {
 
 .box input[type="text"],
 .box input[type="password"] {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 3px solid #ccc;
+    width: 350px;
+    padding: 15px;
+    margin-bottom: 40px;
+    border: 1px solid #ccc;
     border-radius: 20px;
 }
 
 .box button {
-    padding: 12px;
+    padding: 15px;
     width: 70%;
     padding: 10px;
-    background-color: #43476b;
-    border: none;
-    border-radius: 3px;
-    color: #fff3f3;
+/*    background-color: #ffffff;*/
+    border: 1px solid #ccc;
+  background-color: #a5def0;
+background-image: linear-gradient(270deg, #a5def0 0%, #eeeef8 100%);
+
+/*    border-color: linear-gradient(62deg, #ffffff 0%, #e1f7ff 100%);*/
+    border-radius: 10px;
+/*    color: #fff3f3;*/
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
+
 .box button:hover {
-    background-color: #c9c0d8;
+   background-color: #8fd2ec;
     transform: scale(1.05);
     transition: background-color 0.3s ease, transform 0.3s ease;
+}
+.bus-btn{
+    /*background-color: #00cee9;
+background-image: background-color: #ffffff;*/
+   background-color: #ffffff;
+    border: 2px solid ;
+   background-color: #a5def0;
+background-image: linear-gradient(270deg, #a5def0 0%, #eeeef8 100%);
+
+
+
 }
 
 .box p {
@@ -106,7 +126,6 @@ body {
     font-size: 14px;
     line-height: 1.4;
 }
-
 
 .box a {
     color: #007BFF;
@@ -127,10 +146,12 @@ body {
 .testmonials{
     width: 80%;
     margin: auto;
-    padding-top: 100px;
+    padding-top: 50px;
     text-align: center;
 }
 .testimonial-col{
+    margin-left: 30px;
+    margin-right: 30px;
     flex-basis: 44%;
     border-radius: 10px;
     margin-bottom: 5%;
@@ -145,6 +166,9 @@ body {
     margin-left: 5px;
     margin-right: 30px;
     border-radius: 50%;
+}
+.testmonials.row {
+    margin-bottom: 20px;
 }
 .testimonial-col p{
     padding: 0;
