--- a/CustomerPage.css
+++ b/CustomerPage.css
@@ -19,11 +19,6 @@ body {
 .icon:hover {
   transform: scale(1.1);
 }
-
-.categoryText:hover {
-  color: black;
-}
-
 .categoryText {
   font-size: 14px;
   font-weight: bold;
@@ -53,9 +48,6 @@ nav li {
 
 .category-box {
   min-width: 7rem;
-  background-color: white;
-  border-radius: 3px;
-  width: auto;
   height: auto;
   display: inline-flex;
   align-items: center;
@@ -67,7 +59,6 @@ nav li {
   color: grey;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  /* border: 2px solid black; */
 }
 
 .category-box:hover {
@@ -78,4 +69,7 @@ nav li {
 .category-box:active {
   background-color: #4804b6;
   color: #fafafa;
+}
+.cc {
+  border-radius: 6%;
 }
