--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -144,7 +144,7 @@
           <form action="#" method="post">
             <input type="text" placeholder="Email" required />
             <input type="password" placeholder="Password" required />
-            <button type="submit" style="background: white">Login</button>
+            <button type="submit" style="background: white"><a href="{{url_for('customer')}}">Login</a></button>
           </form>
           <p>Don't have an account? <a href="#">Sign Up</a></p>
         </div>
