--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -123,31 +123,31 @@
   <header>
     <nav>
       <li ><a class="category-box" href="#category1">
-          <p class="categoryText"><img class="icon" src="static/assets/grocery.png" width="auto" height="45px">Food</p>
+          <p class="categoryText"><img class="icon" src="{{links['1']}}" width="auto" height="45px">Food</p>
         </a></li>
       <li ><a class="category-box" href="#category2">
-          <p class="categoryText"><img class="icon" src="static/assets/t-shirt.png" width="auto" height="45px">Clothing</p>
+          <p class="categoryText"><img class="icon" src="{{links['2']}}" width="auto" height="45px">Clothing</p>
         </a></li>
       <li ><a class="category-box" href="#category3">
-          <p class="categoryText"><img class="icon" src="static/assets/sewing-machine.png" width="auto" height="45px"> Textile</p>
+          <p class="categoryText"><img class="icon" src="{{links['3']}}" width="auto" height="45px"> Textile</p>
         </a></li>
         <li ><a class="category-box" href="#category7">
-          <p class="categoryText"><img class="icon" src="static/assets/electrical-appliances.png" width="auto" height="45px">Appliances</p>
+          <p class="categoryText"><img class="icon" src="{{links['4']}}" width="auto" height="45px">Appliances</p>
         </a></li>
       <li ><a class="category-box" href="#category5">
-          <p class="categoryText"><img class="icon" src="static/assets/agenda.png" width="auto" height="45px">Book Store</p>
+          <p class="categoryText"><img class="icon" src="{{links['5']}}" width="auto" height="45px">Book Store</p>
         </a></li>
       <li ><a class="category-box" href="#category6">
-          <p class="categoryText"><img class="icon" src="static/assets/pharmacy.png" width="auto" height="45px">Pharmacy</p>
+          <p class="categoryText"><img class="icon" src="{{links['6']}}" width="auto" height="45px">Pharmacy</p>
         </a></li>
       <li ><a class="category-box" href="#category7">
-          <p class="categoryText"><img class="icon" src="static/assets/jewelry.png" width="auto" height="45px">Jewellery</p>
+          <p class="categoryText"><img class="icon" src="{{links['7']}}" width="auto" height="45px">Jewellery</p>
         </a></li>
         <li ><a class="category-box" href="#category7">
-          <p class="categoryText"><img class="icon" src="static/assets/giftbox.png" width="auto" height="45px">Toys & Gifts</p>
+          <p class="categoryText"><img class="icon" src="{{links['8']}}" width="auto" height="45px">Toys & Gifts</p>
         </a></li>
         <li ><a class="category-box" href="#category7">
-          <p class="categoryText"><img class="icon" src="static/assets/makeup.png" width="auto" height="45px">Beauty</p>
+          <p class="categoryText"><img class="icon" src="{{links['9']}}" width="auto" height="45px">Beauty</p>
         </a></li>
     </nav>
   </header>
