--- a/templates/signup-Customer.html
+++ b/templates/signup-Customer.html
@@ -3,11 +3,11 @@
 
 <head>
   <title>Progressive Form | Multi Steps Form</title>
-  <link rel="stylesheet" type="text/css" href="signup-Customer.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/signup-Customer.css">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <meta charset="UTF-8" />
   <meta name="Add to Cartport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="CustomerPage.css">
+  <link rel="stylesheet" href="/static/css/CustomerPage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
@@ -195,7 +195,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="signup-Customer.js"></script>
+  <script type="text/javascript" src="/static/js/signup-Customer.js"></script>
 
   <!----------footer------------>
 
