--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -135,7 +135,7 @@
               <button class="bus-btn" type="submit">Login</button>
             </div>
           </form>
-          <p>Don't have an account? <a href="#">Sign Up</a></p>
+          <p>Don't have an account? <a href="{{url_for('signupCustomer')}}">Sign Up</a></p>
         </div>
       </div>
       <div class="box">
