--- a/static/css/Slidestyle.css
+++ b/static/css/Slidestyle.css
@@ -198,7 +198,7 @@ background-image: background-color: #ffffff;*/
 .cta h1 {
   color: #fff;
   margin-bottom: 40px;
-  padding: 0px 0px 0px 40px;
+  padding: 0;
 }
 .cta a {
   color: black;
