--- a/templates/LandingPage.html
+++ b/templates/LandingPage.html
@@ -144,7 +144,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
   </div>
     <!----------reviews------------>
 <section class="testmonials">
-    <h1>What Our Users Says</h1>
+    <h1 style="font-size: 25px;">What Our Users Says</h1>
     <div class="row">
         <div class="testimonial-col">
             <img src="static/per2.jpeg">
