--- a/static/css/Slidestyle.css
+++ b/static/css/Slidestyle.css
@@ -11,7 +11,7 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url(/static/Assets/loginbg.jpeg);
+  background-image: url(/static/Assets/loginbg.jpeg opacity: 0.6;);
   /*    background: linear-gradient(90deg, #43476b, #007BFF);*/
 }
 
