--- a/static/css/signup-Customer.css
+++ b/static/css/signup-Customer.css
@@ -20,7 +20,7 @@
 }
 
 body{
-	background: white;
+	background-image: url(/static/Assets/loginbg.jpeg);
 	color: var(--text-clr);
 	font-size: 16px;
 	position: relative;
