--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -146,7 +146,7 @@
             <input type="password" placeholder="Password" required />
             <button type="submit" style="background: white"><a href="{{url_for('customer')}}">Login</a></button>
           </form>
-          <p>Don't have an account? <a href="#">Sign Up</a></p>
+          <p>Don't have an account? <a href="{{url_for('signupCustomer')}}">Sign Up</a></p>
         </div>
       </div>
     </div>
