--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -158,16 +158,16 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="static/Assets/POSTER2.jpg"
+          src="static/Assets/POSTER3.jpg"
           class="d-block w-100" alt="..." style="height: 65vh; object-fit: cover;" />
       </div>
       <div class="carousel-item">
         <img
-          src="static/Assets/POSTER1.jpg"
+          src="static/Assets/POSTER2.jpg"
           class="d-block w-100" alt="..." style="height: 65vh; object-fit:cover;" />
       </div>
       <div class="carousel-item">
-        <img src="static/Assets/Carousel3.jpg" class="d-block w-100" alt="..." 
+        <img src="static/Assets/POSTER1.jpg" class="d-block w-100" alt="..." 
         style="height: 65vh; object-fit:cover;"/>
       </div>
     </div>
