--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -158,7 +158,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="static/Assets/POSTER3.jpg"
+          src="/static/Assets/POSTER3.jpg"
           class="d-block w-100" alt="..." style="height: 65vh; object-fit: cover;" />
       </div>
       <div class="carousel-item">
