--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -66,7 +66,7 @@
           type="search"
           placeholder="Search"
           aria-label="Search"/>
-          <button class="btn btn-outline-success fw-bold" type="submit" style="background-image: linear-gradient(270deg, #a5def0 0%, #eeeef8 100%);">
+          <button class="btn btn-outline-success fw-bold" type="submit" style="background-image: linear-gradient(270deg, #a5def0 0%, #eeeef8 100%);color:black;">
             Search
           </button>
       </form>
