--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -66,7 +66,7 @@
           type="search"
           placeholder="Search"
           aria-label="Search"/>
-          <button class="btn btn-outline-success fw-bold" type="submit" style="border-color: blue;">
+          <button class="btn btn-outline-success fw-bold" type="submit" style="border-color: blue;hover: color:red;">
             Search
           </button>
       </form>
