--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -205,7 +205,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/assets/pizza.jpg" width="100%" height="100%">
+              <img src="/static/assets/jacket.jpg" width="100%" height="100%">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -221,7 +221,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/assets/paneer.jpg" width="100%" height="100%">
+              <img src="/static/assets/cloths.png" width="100%" height="100%">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -303,7 +303,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/Assets/pizza.jpg" alt="">
+              <img src="/static/Assets/giftbox.png" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -319,7 +319,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-             <img src="static/Assets/jacket.jpg" alt="">
+             <img src="/static/Assets/t-shirt.png" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
