--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -221,7 +221,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="/static/assets/cloths.png" width="100%" height="100%">
+              <img src="/static/assets/shoes.jpg" width="100%" height="100%">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -238,7 +238,7 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/assets/shoes.jpg" width="100%" height="100%">
+              <img src="/static/assets/paneer.jpg" width="100%" height="100%">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -254,7 +254,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/Assets/smartphone.jpg" alt="">
+              <img src="/static/Assets/paneer.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -270,7 +270,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/Assets/books.jpg" alt="">
+              <img src="/static/Assets/books.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
