--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -254,7 +254,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="/static/Assets/paneer.jpg" alt="">
+              <img src="/static/Assets/pizza.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -270,7 +270,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="/static/Assets/books.jpg" alt="">
+              <img src="/static/Assets/juice.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -287,7 +287,7 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img src="static/Assets/juice.jpg" alt="">
+              <img src="static/Assets/books.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
