--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -303,7 +303,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="/static/Assets/giftbox.png" alt="">
+              <img src="/static/Assets/smartphone.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
@@ -319,7 +319,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-             <img src="/static/Assets/t-shirt.png" alt="">
+             <img src="/static/Assets/fruit.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
