--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -122,7 +122,7 @@
   <!-- Categories starts here-->
   <header>
     <nav>
-      <li ><a class="category-box" href="#category1">
+        <li ><a class="category-box" href="#category1">
           <p class="categoryText"><img class="icon" src="static/assets/grocery.png" width="auto" height="45px">Food</p>
         </a></li>
       <li ><a class="category-box" href="#category2">
@@ -149,6 +149,8 @@
         <li ><a class="category-box" href="#category7">
           <p class="categoryText"><img class="icon" src="static/assets/makeup.png" width="auto" height="45px">Beauty</p>
         </a></li>
+      </ul>
+      
     </nav>
   </header>
   <!-- Categories ends here -->
@@ -195,10 +197,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
@@ -211,10 +213,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
@@ -227,10 +229,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
@@ -244,10 +246,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
@@ -260,10 +262,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
@@ -276,10 +278,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
@@ -293,8 +295,8 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
                   <small class="text-body-secondary">1299 Rs.</small>
                 </div>
@@ -303,32 +305,32 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="/static/Assets/giftbox.png" alt="">
+              <img src="/static/Assets/fruit.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm">
-             <img src="/static/Assets/t-shirt.png" alt="">
+             <img src="/static/Assets/smartphone.jpg" alt="">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy Now</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">See More</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
                   </div>
-                  <small class="text-body-secondary">1299 Rs.</small>
+                  <!-- <small class="text-body-secondary">1299 Rs.</small> -->
                 </div>
               </div>
             </div>
