--- a/templates/LandingPage.html
+++ b/templates/LandingPage.html
@@ -15,6 +15,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
     <title>Landing Page</title>
     <link rel="stylesheet" href="static/css/Slidestyle.css">
     <script src="script.js"></script>
+    <link rel="icon" type="image/x-icon" href="/static/Assets/fevicon.ico">
      <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
