--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact Us</title>
+    <link rel="icon" type="image/x-icon" href="/static/Assets/fevicon.ico">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
