--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="Add to Cartport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="static/CustomerPage.css">
+  <link rel="icon" type="image/x-icon" href="/static/Assets/fevicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
