--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
     <link rel="stylesheet" href="static/css/Slidestyle.css" />
+    <link rel="icon" type="image/x-icon" href="/static/Assets/fevicon.ico">
     <script src="script.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
