Added Merchant Signup Page

--- a/templates/kycform.html
+++ b/templates/kycform.html
@@ -3,11 +3,11 @@
 
 <head>
   <title>KYC Form</title>
-  <link rel="stylesheet" type="text/css" href="signup-Customer.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/signup-Customer.css">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <meta charset="UTF-8" />
   <meta name="Add to Cartport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="CustomerPage.css">
+  <link rel="stylesheet" href="/static/CustomerPage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
@@ -27,7 +27,7 @@
     <div class="mx-4">
       <button class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
         aria-controls="#offcanvasWithBothOptions">
-        <img src="static/logo.png" style="width: auto; height: 3.7rem;">
+        <img src="/static/logo.png" style="width: auto; height: 3.7rem;">
       </button>
 
       <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
