--- a/templates/signup-merchant.html
+++ b/templates/signup-merchant.html
@@ -188,7 +188,7 @@
           <button type="button" class="common_btnskyc1"><a href="/templates/kycform.html" class="linkm">Proceed Now</a></button>
         </div>
         <div>
-          <button type="button" class="common_btnskyc1"><a href="#" class="linkm">I will do it later</a></button>
+          <button type="button" class="common_btnskyc1"><a href="/static/Vendor/index/index.html" class="linkm">I will do it later</a></button>
         </div>
       </div>
     </div>
