--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -136,7 +136,7 @@
               <button class="bus-btn" type="submit">Login</button>
             </div>
           </form>
-          <p>Don't have an account? <a href="/templates/signup-merchant.html">Sign Up</a></p>
+          <p>Don't have an account? <a href="{{url_for('signupMerchant')}}">Sign Up</a></p>
         </div>
       </div>
       <div class="box">
