--- a/templates/LandingPage.html
+++ b/templates/LandingPage.html
@@ -139,7 +139,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">MarketConnect is a dynamic web application that bridges the gap between local businesses, small enterprises, and eager customers in the digital age. Our platform offers a seamless online marketplace experience, empowering businesses of all sizes to thrive in the world of e-commerce.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3"><a href="{{url_for('signupCustomer')}}" class="signupCustomer">Sign Up</a></button>
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3"><a href="{{url_for('signupMerchant')}}" class="signupCustomer">Sign Up</a></button>
       </div>
     </div>
   </div>
